# AgentPeXI

./: .env.example  .gitignore  CLAUDE.md  COPILOT_MOCK_BRIEF.md  README.md  com.agentpexi.plist  docker-compose.yml  pyproject.toml  requirements.txt  start.sh  stop.sh  style-comparison.html
.claude/: settings.local.json
.github/: copilot-instructions.md
agents/account_manager/: CLAUDE.md
agents/analyst/: CLAUDE.md
agents/billing/: CLAUDE.md
agents/code_team/: CLAUDE.md
agents/delivery_orchestrator/: CLAUDE.md
agents/delivery_tracker/: CLAUDE.md
agents/design/: CLAUDE.md
agents/dev_orchestrator/: CLAUDE.md
agents/doc_generator/: CLAUDE.md
agents/lead_profiler/: CLAUDE.md
agents/proposal/: CLAUDE.md
agents/qa/: CLAUDE.md
agents/sales/: CLAUDE.md
agents/scout/: CLAUDE.md
agents/support/: CLAUDE.md
apps/frontend/: index.html  package.json  (+2 more)
config/: external_apis.yaml  pricing.yaml  scoring.yaml  sectors.yaml
docs/: agent-prompts.md  api.md  base-agent.md  config.md  conventions.md  data-models.md  db-internals.md  db-schema.md  error-codes.md  frontend.md  inter-agent.md  mcp-gmail.md  orchestrator.md  overview.md  pipeline.md  portal.md  project-structure.md  security.md  service-types.md  setup-macos.md  stack.md  testing.md  tools.md
frontend/: package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
knowledge_base/: .manifest.json
scripts/: download_fonts.py  generate_wake_samples.py  package-lock.json  package.json  render.js  reset_etsy_db.py  test_pipeline.py  train_wake_word.py
tests/: conftest.py  test_block1_integration.py
(+305 files in other folders)
